# why-runner

./: .env.example  .gitignore  AUDITORIA_PRE_DEFESA.md  CLAUDE.md  README.md  Untitled  a.out  biome.json  cbie.txt  code.cpp  code.out  components.json  compose.yml  docker-compose.yml  drizzle.config.ts  env.ts  globals.ts  next.config.ts  nx.json  package-lock.json  package.json  problems.json  seed.ts  sum.cpp  tool-versions  turbo.json
app/: global-error.tsx
components/: breadcrumbs.tsx  footer.tsx  share-to-feed-modal.tsx  user-dock.tsx
drizzle/: 0000_modern_hiroim.sql  0000_sturdy_lifeguard.sql  0001_concerned_archangel.sql  0001_faithful_flatman.sql  0001_neat_sunspot.sql  0002_jittery_randall_flagg.sql  0002_milky_lake.sql  0002_wide_magik.sql  0003_daffy_echo.sql  0003_tense_wither.sql  0004_dashing_robin_chapel.sql  0004_striped_mulholland_black.sql  0005_futuristic_prism.sql  0005_natural_moondragon.sql  0006_curly_snowbird.sql  0006_ordinary_infant_terrible.sql  0007_common_brood.sql  0008_messy_tomas.sql  0009_busy_santa_claus.sql  0010_sleepy_jackal.sql  0011_short_morgan_stark.sql  0013_clever_mac_gargan.sql  schema.ts  seed.ts
hooks/: use-add-problem.tsx  use-ai-help.tsx  use-contest-leaderboard.tsx  use-contest-submissions.tsx  use-contest.tsx  use-contests.tsx  use-create-contest.tsx  use-create-problem.tsx  use-create-submission.tsx  use-delete-contest.tsx  use-join-contest.tsx  (+9 more)
judge/: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  compose.yml  sum.rs
judge/portugol/: Dockerfile
judge/src/: db.rs  main.rs  models.rs  runner.rs
(+776 files in other folders)
